"corrections of week 02"
