# server.js
@@ -1,8 +1,10 @@
 const express = require('express');
 const port = process.env.PORT || 3000;
-var logger = require('morgan');
+const logger = require('morgan');
 const bodyParser = require('body-parser');
 const mongodb = require('./data/database');
+const swaggerUi = require('swagger-ui-express'); // Importa Swagger UI
+const swaggerDocument = require('./swagger.json'); // Archivo generado por swagger-autogen
 
 const app = express();
 
@@ -21,13 +23,17 @@ app
     );
     next();
   })
-  .use('/', require('./routes'));
+  .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument)) // Agrega Swagger UI
+  .use('/', require('./routes')); // Rutas de la API
 
+// Inicialización de la base de datos
 mongodb.initDb((err) => {
   if (err) {
     console.log(err);
   } else {
-    app.listen(port);
-    console.log(`Connected to DB and listening on ${port}`);
+    app.listen(port, () => {
+      console.log(`Connected to DB and listening on ${port}`);
+      console.log(`Swagger UI available at http://localhost:${port}/api-docs`);
+    });
   }
 });
